Before generating ipynb files

--- a/pseudo_dojo/pseudos/ONCVPSP-PBE/index.ipynb
+++ b/pseudo_dojo/pseudos/ONCVPSP-PBE/index.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:9f2bf680111927c3c68291d22f066e23af042630cb5de04cd4c1e7dabc093ba6"
+  "signature": "sha256:cf5049fef0ffc993d2029c8bfece6bc4345c9e9f435a479e650fa8684f8f8f02"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -81,6 +81,16 @@
      "outputs": [
       {
        "html": [
+        "<a href='Si/Si.ipynb' target='_blank'>Si/Si.ipynb</a><br>"
+       ],
+       "metadata": {},
+       "output_type": "display_data",
+       "text": [
+        "/Users/gmatteo/Coding/git_branches/pseudo_dojo/pseudo_dojo/pseudos/ONCVPSP-PBE/Si/Si.ipynb"
+       ]
+      },
+      {
+       "html": [
         "<a href='V/V-sp.ipynb' target='_blank'>V/V-sp.ipynb</a><br>"
        ],
        "metadata": {},
@@ -90,7 +100,7 @@
        ]
       }
      ],
-     "prompt_number": 2
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
