Remove javascript hack in index

--- a/pseudo_dojo/pseudos/ONCVPSP-PBE/index.ipynb
+++ b/pseudo_dojo/pseudos/ONCVPSP-PBE/index.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:18cc409d913832efcedd6f1620a38ac3401d2ce35b42b889e930ee444a52143f"
+  "signature": "sha256:f07ea20bc23999bb9380a5e06680c0fd378f7d575b26f9f12beb501b3399b1b4"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -9,20 +9,7 @@
   {
    "cells": [
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "#%%javascript\n",
-      "#IPython.OutputArea.auto_scroll_threshold = 9999;"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 1
-    },
-    {
-     "cell_type": "heading",
-     "level": 1,
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
       "Links to Ipython notebooks with plots and validation results:  "
@@ -1298,7 +1285,7 @@
        ]
       }
      ],
-     "prompt_number": 2
+     "prompt_number": 5
     },
     {
      "cell_type": "heading",
@@ -1343,28 +1330,28 @@
        "output_type": "stream",
        "stream": "stderr",
        "text": [
-        "CRITICAL:pymatgen.io.abinitio.pseudos:O-dmax.psp8 raised 52.0\n"
+        "WARNING:pymatgen.io.abinitio.pseudos:O-dmax.psp8 raised 52.0\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stderr",
        "text": [
-        "CRITICAL:pymatgen.io.abinitio.pseudos:Na-sp-nonlcc.psp8 raised 60.0\n"
+        "WARNING:pymatgen.io.abinitio.pseudos:Na-sp-nonlcc.psp8 raised 60.0\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stderr",
        "text": [
-        "CRITICAL:pymatgen.io.abinitio.pseudos:Na-sp.psp8 raised 60.0\n"
+        "WARNING:pymatgen.io.abinitio.pseudos:Na-sp.psp8 raised 60.0\n"
        ]
       },
       {
        "output_type": "stream",
        "stream": "stderr",
        "text": [
-        "CRITICAL:pymatgen.io.abinitio.pseudos:Te-d.psp8 raised 56.0\n"
+        "WARNING:pymatgen.io.abinitio.pseudos:Te-d.psp8 raised 56.0\n"
        ]
       },
       {
@@ -2775,13 +2762,13 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 3,
+       "prompt_number": 6,
        "text": [
-        "<IPython.core.display.HTML at 0x112f47d10>"
+        "<IPython.core.display.HTML at 0x110530490>"
        ]
       }
      ],
-     "prompt_number": 3
+     "prompt_number": 6
     },
     {
      "cell_type": "heading",
@@ -2912,7 +2899,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 4,
+       "prompt_number": 7,
        "text": [
         "       low_dfact_meV  high_dfact_meV  low_ecut  high_ecut  \\\n",
         "count        126.000         123.000   126.000    126.000   \n",
@@ -2946,7 +2933,7 @@
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 7
     },
     {
      "cell_type": "heading",
@@ -2962,7 +2949,9 @@
      "input": [
       "# Here there's a bug in the x-ticks due to mpld3: \n",
       "# See https://github.com/jakevdp/mpld3/issues/22\n",
-      "%matplotlib inline\n",
+      "#%matplotlib inline\n",
+      "###%%javascript\n",
+      "#### IPython.OutputArea.auto_scroll_threshold = 9999;\n",
       "\n",
       "#import pylab\n",
       "#pylab.rcParams['figure.figsize'] = (25.0, 10.0)\n",
@@ -2974,7 +2963,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -2992,7 +2981,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 4
+     "prompt_number": 9
     }
    ],
    "metadata": {}
