--- a/pseudo_dojo/pseudos/ONCVPSP-PBE-PDv0.3/README
+++ b/pseudo_dojo/pseudos/ONCVPSP-PBE-PDv0.3/README
@@ -1,12 +1,3 @@
-The pseudo potentials in this table use the extension switch = 1.
-Abinit versions < 7.11.10 will not be able to use this.
-The pseudos can be used without any problem by changing the corresponding line in the psp8 file.
-You can use the script in this folder to do this automatically.
-Note the Hash in the dojo report has been calculated with the extension switch 1.
-It will not be correct any more if the line has been changed. Hence automatic cheching using abipy
-will not work anymore in this case. 
-
-
 TO BE INVESTIGATED:
 
 Pt-sp
@@ -42,3 +33,12 @@ Sn-d (no GW)
 Sb-d (no GW, ghost) *
 Te-d (ghosts is missing?)
 Xe
+Hg (no GW)
+Pb-d (high s)
+Bi-d (high p)
+Rn (no minimum in EOS??)
+W-p (ghost at 25 eV, interesting example)
+Re-sp-new (f oscillates)
+Pt-fsp with modcore 1 ***
+Pt-sp with modcore 1
+   
