--- a/pseudo_dojo/pseudos/ONCVPSP-PBE-PDv0.3/README
+++ b/pseudo_dojo/pseudos/ONCVPSP-PBE-PDv0.3/README
@@ -1,42 +1,42 @@
-TO BE INVESTIGATED:
-
-Pt-sp
-Sr.psp8 (model core-charge!)
-Te-d (Sr-sp.psp8_Te-d.psp8)
+H: is a ploc version
+He: is the ploc version just as accurate as the standard but cheaper
+O**: is dmax  (could smooth v(d))
+F***: could be improved (too hard)
+Ne*: Hard to converge (brw: no model core charge) 
+     Try: fcfact 1.0 rcfact 1.15-1.25
 
 COULD BE IMPROVED
-H
-He
-B-gw
-N
-O *
-
-F or F-new *** (model core charge)
-Use F-new: 
-
-Ne (no model core charge!) 
-Try: fcfact 1.0 rcfact 1.15-1.25
-
 Na (no model core charge)
 Na/Na-sp-gw.in:# icmod fcfact
 Na/Na-sp-gw.in-0 0.04
-
 Mg (ghost at +80 eV) --> fast
 Mg/Mg-sp-gw.in 
 # icmod fcfact 0 4 1.5
 
-Al requirese GW version
-Si requires GW version
+Al**: oscillations in ffactors, requires GW version
+Si**: oscillations in ffactors, requires GW version
+P**: requires GW version (bad mcore, dloc version --> no FR)
+S*: requires GW version
+Cl**: (vloc(d), slow convergence)
+Ti-sp*: mc look ok but ask Michiel about mc params
+V-sp*: mc maybe a bit too hard
 
-Ca-sp icmod 2
+Mn****
+Co** ask michiel about mc in particular albeit I don't think we can improve it
 
+Fe: the Fe potentials uses ncon 3 the standard is 4
+Fe-sp**: model core charge too hard, try the one from Fe-sp-high.
+Zn-sp*: I've added the GW tag (ok but not "perfect", ask Michiel if he has specialized version)
+        Ask about mc params
+Ga-d*: Require GW version
+    
+
+TO BE INVESTIGATED:
+Pt-sp
+Sr.psp8 (model core-charge!)
+Te-d (Sr-sp.psp8_Te-d.psp8)
 Cu-sp high
-
-Ga-d (model core charge icmod 1)
-5-8 1.2-1.45
-
 Sr-sp (bad model? high v_s) ***  Replace it with Sr-sp-new
-
 Tc-sp (high v_s)
 Rh (high vs)
 Pd.psp8 (ghosts!!!!!!)
@@ -56,9 +56,9 @@ Bi-d (high p)
 Rn (no minimum in EOS??)
 W-p (ghost at 25 eV, interesting example)
 Re-sp-new (f oscillates)
-
 Pt-fsp with modcore 1 ***
 Pt-sp with modcore 1
 Try: Pt-sp and Pt-ex-sp
-
 La/La-sp.in:# icmod fcfact 1 0.25
+
+Test that there's no fr pseudo with local part taken from v(L)
