Improve Al form-factors

--- a/pseudo_dojo/pseudos/ONCVPSP-PBE-PDv0.3/README
+++ b/pseudo_dojo/pseudos/ONCVPSP-PBE-PDv0.3/README
@@ -65,6 +65,7 @@ Ag.psp8: It seems it's difficult to get good logders without semicore
 Cd.psp8 Has ghost at +73 Ha (should work on Pd/Ag/Cd)
 Cd-sp:*** Ask michiel about model core 
 
+[In-spd Running]
 In-d:** GHOST_In-20eV (try In-spd)
 
 [RUNNING]
